resources/sass/calendar/layout.scss
/********************************************/
/** Big containers - Body, header, content **/
/********************************************/

.bg-accent {
    background-color: $accent-color;
}

.accent-bg-color {
    background-color: $accent-color !important;
}

.btn.btn-accent {
    background-color: $accent-color;
    border-color: $accent-color;
    color: white;

    &:hover {
        background-color: $accent-color-darker;
        border-color: $accent-color;
        color: white;
    }
}

.btn.btn-outline-accent {
    background-color: transparent;
    border-color: $accent-color;

    &:hover {
        background-color: $accent-color;
        border-color: $accent-color;
    }
}

body {
    min-height: 100%;
    font-family: "Inter", sans-serif;

    a {
        color: $accent-color-light;
    }
}

::-webkit-scrollbar {
    width: 8px; /* for vertical scrollbars */
    height: 12px; /* for horizontal scrollbars */
    border-radius: 4px;
}

::-webkit-scrollbar-track {
    background: rgba(0, 0, 0, 0.1);
}

::-webkit-scrollbar-thumb {
    background: rgba(0, 0, 0, 0.3);
}

#loading_background {
    display: flex;
    flex-direction: column;
    z-index: 2000;

    img,
    div {
        display: inline-flex;
        align-self: center;
        position: relative;
        top: 45vh;
        padding-top: 10px;
        color: white;
    }

    .loading_bar {
        width: 30vw;
    }

    .loading_cancel_button_container {
        display: inline-flex;
        align-self: center;
        position: relative;
        padding-top: 10px;
        width: 20vw;
    }
}

/************/
/** Header **/
/************/

.navbar-logo {
    max-height: 2rem;
}

.navbar {
    @media (min-width: 768px) and (hover: none) {
        min-height: 3.6rem;
    }

    .new-nav-item {
        position: relative;

        & a:after {
            content: "New!";
            display: inline;
            color: $text-green-400;
            background-color: $bg-green-800;
            font-size: 0.8rem;
            padding: 0.2rem 0.6rem;
            border-radius: 999px;
            margin-left: 0.4rem;
        }
    }
}

.page-calendars-create {
    .navbar-expand.sticky-top {
        z-index: 10;
    }
}

.page-calendars-edit {
    display: flex;

    .navbar {
        &-expand.sticky-top {
            z-index: 10;
        }

        &-brand {
            padding: 0 0.5rem;
            margin-right: 0.75rem;
        }

        .nav-link {
            padding: 0 0.5rem;
        }
    }

    #content {
        height: 100vh;
    }
}

body.page-calendars-index {
    .navbar .nav-item.my-calendars {
        font-weight: bold;
        color: white;

        a {
            color: white;
        }
    }
}

/*************/
/** General **/
/*************/

#generator_container {
    display: flex;
    width: 100%;
    margin: 0;
    height: 100vh;
}

#input_container {
    position: relative;
    overflow-y: auto;
    order: 1;
    max-height: 100%;
    max-width: $sidebar-width;
    flex-grow: 1;

    @media (screen and min-width: 768px) {
        min-width: $sidebar-width;
    }
}

#input_container.sidebar-mobile-half:not(.inputs_collapsed) {
    width: 50vw;
    max-width: 50vw;
    min-width: 50vw;
}

#input_container.inputs_collapsed {
    width: 0;
    overflow: hidden;
    padding: 0;
    min-width: 0;
    max-width: 0;
    margin-right: 0;
}

#input_container > .accordion > .wrap-collapsible:last-child {
    margin-bottom: 9rem;
}

#input_collapse_btn:focus {
    outline: 0 !important;
}

#input_collapse_btn {
    // background-color: $accent-color;
    display: grid;
    place-items: center;
    text-align: center;
    font-size: 1.5rem;
    border-radius: 0 0 4px 4px;
    cursor: pointer;
    transition: 0.5s all ease;
    width: auto !important;

    &.is-active {
        display: none !important;
    }
}

#calendar_container {
    display: flex;
    flex-direction: column;
    order: 3;
    padding: 0;
    flex-grow: 1;
    flex-basis: 0;
    transition: width 0.5s ease;
    overflow-y: auto;
    max-height: 100%;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
    background-color: $calendar-bg-color;
}

@media (horizontal-viewport-segments: 2) {
    #input_container:not(.inputs_collapsed) {
        min-width: env(viewport-segment-right 0 0);
        margin-right: calc(
            env(viewport-segment-left 1 0) - env(viewport-segment-right 0 0)
        );
    }

    #input_collapse_btn.is-active {
        right: calc(100vw - env(viewport-segment-right 0 0));
        left: auto;
    }

    #calendar_container {
        flex-basis: env(viewport-segment-right 0 0);
    }
}

@media screen and (min-width: 799px) {
    #input_container.sidebar-surface-duo:not(.inputs_collapsed) {
        min-width: calc(50% - 46px);
        margin-right: 87px;
    }

    #input_collapse_btn.sidebar-surface-duo {
        &.is-active {
            right: calc(50% + 46px);
            left: auto;
        }
    }

    #input_container.sidebar-surface-duo-2:not(.inputs_collapsed) {
        min-width: calc(50% - 16px);
        margin-right: 32px;
    }

    #input_collapse_btn.sidebar-surface-duo-2 {
        &.is-active {
            right: calc(50% + 16px);
            left: auto;
        }
    }
}

/************/
/** Footer **/
/************/

#footer {
    position: relative;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    order: 10000;

    a {
        color: $blue;
        text-decoration: underline;
    }
}

/*****************/
/** Alert boxes **/
/*****************/

#alert_background {
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 10000;
    position: fixed;
    align-items: center;
    display: none;
}

#alert {
    padding: 20px;
    background-color: #f44336; /* Red */
    color: white;
    width: 50%;
    position: relative;
    margin: auto;
    z-index: 10000;
}

#alert_closebtn {
    margin-left: 15px;
    color: white;
    font-weight: bold;
    float: right;
    font-size: 22px;
    line-height: 20px;
    cursor: pointer;
    transition: 0.3s;

    &:hover {
        color: black;
    }
}

/*****************/
/** Export page **/
/*****************/

.page-export {
    .export-body {
        height: 74vh;
        background-color: $card-bg-color;

        &:focus {
            color: #f2f2f2;
        }
    }
}

